argocd/demo/canary-demo/rollout.yaml
---
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: canary-demo
  namespace: demo
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  replicas: 3
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: canary-demo
  template:
    metadata:
      labels:
        app: canary-demo
    spec:
      containers:
        - name: rollouts-demo
          image: argoproj/rollouts-demo:blue
          ports:
            - containerPort: 8080
  strategy:
    canary:
      canaryService: canary-demo-canary
      stableService: canary-demo-stable
      trafficRouting:
        plugins:
          argoproj-labs/gatewayAPI:
            httpRoute: canary-demo
            namespace: demo
      steps:
        - setWeight: 5
        - pause: { duration: 30s }
        - setWeight: 20
        - pause: { duration: 30s }
        - setWeight: 50
        - pause: { duration: 30s }
        - setWeight: 80
        - pause: { duration: 30s }
